edit forme and styling

--- a/Project: Sign-Up Form/index.html
+++ b/Project: Sign-Up Form/index.html
@@ -30,9 +30,9 @@
             sign up now to get started . <span>You know you want to.</span>
 
         </p>
-        <form action="">
+        <form action="" id="#">
             <div class="form-title">
-                <h3>let's do this</h3>
+                <h3>Let's do this!</h3>
             </div>
             <div>
                 <legend for="name">first name</legend>
@@ -61,7 +61,7 @@
 
         </form>
         <div>
-            <button>Create Account</button>
+            <button type="submit" form="#">Create Account</button>
             <p class="join">Already have an account? <a href="">Log in </a></p>
         </div>
     </main>
